--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="web-container">
     <canvas class="webgl"></canvas>
     <script type="module" src="./script.js"></script>
-    <iframe src="http://192.168.1.5:8501" width="100%" height="600px"></iframe>
+    <iframe src="https://pdf-chatbot-718x.onrender.com" width="100%" height="600px"></iframe>
 </div>
 </body>
 </html>
