--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>13 - 3D Text</title>
+    <title>PDF-CHATBOT</title>
     <!-- <style>
         .web-container {
             margin-bottom: 375px; /* Adjust the margin as needed */
